--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,5 +17,32 @@ html {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  background-color: white;
+}
+
+.lds-dual-ring {
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  margin-top: auto;
+}
+
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #a30926;
+  border-color: #a30926 transparent #a30926 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
